--- a/src/components/renderers/DominoViewEditorHeaderRenderer.mxml
+++ b/src/components/renderers/DominoViewEditorHeaderRenderer.mxml
@@ -34,7 +34,8 @@
 -->
 <s:DefaultGridHeaderRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 							 xmlns:s="library://ns.adobe.com/flex/spark" 
-							 xmlns:mx="library://ns.adobe.com/flex/mx" height="30">
+							 xmlns:mx="library://ns.adobe.com/flex/mx" height="30"
+                             click="dispatchClickEvent(event)">
 	
 	<fx:Declarations>
 		<s:Label id="labelDisplay" name="label_Display"
@@ -44,7 +45,7 @@
                 textAlign="left"
                 fontWeight="bold"
                 showTruncationTip="true"
-                click="dispatchClickEvent(event)"/>
+                />
 	</fx:Declarations>
 
     <fx:Script>
